--- a/package.json
+++ b/package.json
@@ -4,11 +4,26 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npm-run-all --parallel build dev-server",
+    "dev-server": "node server.js",
+    "build": "npm-run-all clean-dist run-webpack",
+    "run-webpack": "webpack --watch",
+    "clean-dist": "rimraf ./dist && mkdir dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.2",
+    "file-loader": "^0.11.1",
+    "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
